@@ -7,6 +7,7 @@
     with --update (mga#2317)
 - gurpmi:
   o split global progress bar widget for rpmdrake (mga#778)
+  o show removed packages in progress too
   o support exceptions in callback in main wrapper too
   o support other distros which do not handle exceptions in gtk+ callbacks
   o use new exception management
